--- a/app/src/main/res/layout/activity_customer_list.xml
+++ b/app/src/main/res/layout/activity_customer_list.xml
@@ -7,14 +7,37 @@
     android:layout_height="match_parent"
     tools:context=".CustomerListActivity">
 
+    <!-- Button to fetch customers -->
+    <Button
+        android:id="@+id/btnFetchCustomers"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Fetch Customers"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
+
+    <!-- RecyclerView for displaying customers -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCustomers"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scrollbars="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnFetchCustomers"
+        app:layout_constraintBottom_toTopOf="@id/invoicesLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Dynamic layout to add customer names with "Process Invoice" buttons -->
+    <LinearLayout
+        android:id="@+id/invoicesLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/recyclerViewCustomers"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
